[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electrolyserlib"
version = "0.1.0"
description = "Python library for hydrogen production calculations based on PEM electrolyser models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["hydrogen", "electrolyser", "PEM", "energy", "renewable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/moend95/electrolyserlib"
Repository = "https://github.com/moend95/electrolyserlib"
"Bug Tracker" = "https://github.com/moend95/electrolyserlib/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["electrolyserlib*"]
